--- a/lesson6.ipynb
+++ b/lesson6.ipynb
@@ -380,7 +380,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('D:/AnalystBigData/1_3 Python для Data Science/4Урок/creditcard.csv')"
+    "df = pd.read_csv('D:/AnalystBigData/Python-Data-Science-Numpy-Matplotlib-Scikit-learn/4Урок/creditcard.csv')"
    ]
   },
   {
