Update and rename course_work.ipynb to Lesson-10.ipynb

--- a/Lesson-10.ipynb
+++ b/Lesson-10.ipynb
@@ -68,7 +68,7 @@
    },
    "outputs": [],
    "source": [
-    "apartments = pd.read_csv('D:/Komarov/AnalystBigData/1_3 Python DS/Kurs_project_task/train.csv')"
+    "apartments = pd.read_csv('D:/Kraeva/Python-Data-Science-Numpy-Matplotlib-Scikit-learn/Kurs_project_task/train.csv')"
    ]
   },
   {
@@ -8702,7 +8702,7 @@
    "source": [
     "# Заполняем пустые наблюдения жилой площади след образом: \n",
     "# - находим средние значения (groupby) Square and LifeSquare по районам\n",
-    "# - нахоим отношение Square к LifeSquare по районам \n",
+    "# - находим отношение Square к LifeSquare по районам \n",
     "\n",
     "ag = apartments.groupby('DistrictId')['Square', 'LifeSquare'].mean()\n",
     "ag['koef'] = ag['Square']/ag['LifeSquare']\n",
@@ -9155,7 +9155,7 @@
    ],
    "source": [
     "# Заполним площадь кухни средней площадью кухонь по району\n",
-    "# Замену значений будем производить с помощью создания новоого ДФ\n",
+    "# Замену значений будем производить с помощью создания нового ДФ\n",
     " \n",
     "mean_ks = apartments.groupby('DistrictId')['KitchenSquare'].mean()\n",
     "mean_ks = mean_ks.loc[apartments.loc[apartments['Square'] < apartments['KitchenSquare'], 'DistrictId'].values]\n",
@@ -18196,7 +18196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "apart_test = pd.read_csv('D:/Komarov/AnalystBigData/1_3 Python DS/Kurs_project_task/test.csv')\n",
+    "apart_test = pd.read_csv('D:/Kraeva/Python-Data-Science-Numpy-Matplotlib-Scikit-learn/Kurs_project_task/test.csv')\n",
     "\n",
     "apart_test.set_index('Id', inplace = True)\n",
     "\n",
@@ -18423,7 +18423,7 @@
    "source": [
     "# Заполняем пустые наблюдения жилой площади след образом: \n",
     "# - находим средние значения Square and LifeSquare по районам\n",
-    "# - нахоим отношение Square к LifeSquare по районам \n",
+    "# - находим отношение Square к LifeSquare по районам \n",
     "\n",
     "ag = apart_test.groupby('DistrictId')['Square', 'LifeSquare'].mean()\n",
     "ag['koef'] = ag['Square']/ag['LifeSquare']\n",
@@ -18765,7 +18765,7 @@
    ],
    "source": [
     "# Заполним площадь кухни средней площадью кухонь по району\n",
-    "# Замену значений будем производить с помощью создания новоого ДФ\n",
+    "# Замену значений будем производить с помощью создания нового ДФ\n",
     " \n",
     "mean_ks = apart_test.groupby('DistrictId')['KitchenSquare'].mean()\n",
     "mean_ks = mean_ks.loc[apart_test.loc[apart_test['Square'] < apart_test['KitchenSquare'], 'DistrictId'].values]\n",
@@ -19741,7 +19741,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_test_pred.to_csv('KKomarov_predictions.csv', encoding='utf-8')"
+    "y_test_pred.to_csv('Kraeva_predictions.csv', encoding='utf-8')"
    ]
   }
  ],
