--- a/Lesson-10.ipynb
+++ b/Lesson-10.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Курсовой проект для курса \"Python для Data Science\"\n",
+    "# Курсовой проект для курса \"Библиотеки Python для Data Science: Numpy, Matplotlib, Scikit-learn\"\n",
     "\n",
     "Материалы к проекту (файлы):\\\n",
     "train.csv\\\n",
